# promptkeep

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  plan-okay-so-one-of-synchronous-bird.md  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/ui-aurora/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ui-aurora/src/: App.tsx  index.css  main.tsx  store.tsx  ui.tsx
apps/ui-aurora/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui-aurora/src-tauri/capabilities/: default.json
apps/ui-aurora/src-tauri/icons/: icon.icns
apps/ui-aurora/src-tauri/src/: main.rs
apps/ui-aurora/src/components/: AuthGate.tsx  CommunityView.tsx  OpenInMenu.tsx  OptimizeDialog.tsx  PromptView.tsx  QuickPanel.tsx  SettingsView.tsx  Sidebar.tsx  Toaster.tsx  VersionHistory.tsx
crates/core/: Cargo.toml
crates/core/src/: ai.rs  commands.rs  error.rs  fs_library.rs  git.rs  keychain.rs  lib.rs  state.rs  versions.rs  watcher.rs
supabase/migrations/: 0001_community.sql  0002_library.sql  0003_community_social.sql
tools/: generate-icon.mjs
