[package]
name = "spl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared backend core for the System Prompt Library desktop app"

[lib]
name = "spl_core"
crate-type = ["lib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
